[metadata]
name = bluelink
author = Felipe Faria
author-email = felipefaria@me.com
summary = Unofficial API wrapper for Hyundais BlueLink.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.7
home-page = https://github.com/synchronizing/bluelink
project_urls =
    Bug Tracker = https://github.com/synchronizing/bluelink/issues
    Source Code = https://github.com/synchronizing/bluelink/tree/master
license = MIT
classifier =
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords =
    bluelink

[entry_points]
console_scripts =
    bluelink = bluelink.cli:main

[files]
packages =
    bluelink

[flake8]
max-line-length = 88
